사고접수현황 수정

--- a/src/components/icon.html
+++ b/src/components/icon.html
@@ -54,6 +54,12 @@
 				<div class="box a">
 					<ul>
 						<li>
+							<span class="icon">
+								<i class="ico refresh lg"></i>
+							</span>
+							<span class="text">refresh</span>
+						</li>
+						<li>
 							<span class="icon" style="background-color:#000">
 								<i class="ico file-send lg"></i>
 							</span>
