--- a/src/components/text.html
+++ b/src/components/text.html
@@ -139,6 +139,31 @@
                             </ol>
                         </div>
                         <!-- //List -->
+
+						<!-- List -->
+                        <div class="tmp-guide-box guide-btn">
+                            <h2 class="guide-box-tit">Content</h2>
+                            
+							<div class="notice-txt">
+								<h4 class="title-xs">
+									유의사항
+								</h4>
+								
+								<ul class="list">
+									<li>
+										사고 견적은 등록하신 사진을 기준으로 산출됩니다. 추가 견적이 발생하지 않도록 사진을 정확히 촬영해주세요.
+									</li>
+									<li>
+										사고와 관계없는 사진은 처리되지 않습니다.
+									</li>
+									<li>
+										등록한 사진은 삭제되지 않으며, 최대 10장까지 등록 가능합니다.
+									</li>
+								</ul>
+							</div>
+
+                        </div>
+                        <!-- //List -->
                     </div>
                 </div>
             </section>
