--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -89,6 +89,7 @@ $icon-size: (
         "arrow-next": "icon_arrow_next.svg",
         "arrow-down": "icon_arrow_down.svg",
         "arrow-up-down": "icon_arrows_up_down.svg",
+        "refresh": "icon_payment_refresh.svg",
     )
     
 ) !default;
