공통(cm) -- 작업 중

--- a/src/scss/_customer.scss
+++ b/src/scss/_customer.scss
@@ -859,4 +859,23 @@
         border: 0;
         margin: 24px 0;
     }
+
+    .way-to{
+        margin: 0 -20px;
+        .item{
+            .img{
+                height: 180px;
+                overflow: hidden;
+                img{
+                    width: 100%;
+                }
+            }
+
+            .desc{
+                padding: 24px 16px;
+                background-color: $gray-000;
+                @include fontSize(16,500)
+            }
+        }
+    }
 }
