공통(cm) -- 작업 중

--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -90,6 +90,7 @@ $icon-size: (
         "arrow-down": "icon_arrow_down.svg",
         "arrow-up-down": "icon_arrows_up_down.svg",
         "refresh": "icon_payment_refresh.svg",
+        "urgent": "icon_urgent.svg",
     )
     
 ) !default;
