공통(cm) -- 작업 중

--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -109,6 +109,9 @@ $btn-size: (
     &.icon{
         height: initial;
     }
+    &.round{
+        border-radius: 2rem;
+    }
 
     @each $value, $color in $btn-colors {
         &.#{$value} {
