--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -91,6 +91,9 @@ $icon-size: (
         "arrow-up-down": "icon_arrows_up_down.svg",
         "refresh": "icon_payment_refresh.svg",
         "urgent": "icon_urgent.svg",
+        "copy": "icon_copy.svg",
+        "map-pin": "icon_map_pin.svg",
+        "favorite-fill": "icon_favorite_fill.svg",
     )
     
 ) !default;
