--- a/src/scss/_customer.scss
+++ b/src/scss/_customer.scss
@@ -938,7 +938,7 @@
             background-position: center center;
             background-size: cover;
         }
-        .name{
+        .name {
             margin-left: 8px;
             @include fontSize(12, 500);
         }
@@ -958,8 +958,8 @@
             border-radius: $border-radius;
             overflow: hidden;
         }
-        .text{
-            @include fontSize(14,500)
+        .text {
+            @include fontSize(14, 500);
         }
     }
     .reply-footer {
@@ -1017,6 +1017,37 @@
             .comment-body {
                 color: $navy-070;
                 @include fontSize(14, 500);
+            }
+        }
+    }
+}
+
+// 그린존 - 주차장 정보
+.parking-lot-info {
+    margin: 0 -20px;
+    .img {
+        height: 180px;
+        overflow: hidden;
+        img {
+            width: 100%;
+        }
+    }
+    .info {
+        padding: 24px 20px;
+        .location {
+            @include flex-center;
+            .text {
+                @include fontSize(16, 500);
+            }
+            .text + .btn {
+                margin-left: 8px;
+            }
+        }
+        .btn-group{
+            justify-content: center;
+            margin-top: 24px;
+            .btn{
+                flex: 0 0 auto;
             }
         }
     }
