--- a/src/components/input.html
+++ b/src/components/input.html
@@ -79,6 +79,9 @@
 										<button id="toggler" type="button" class="ip-icon">
 											<i class="ico eye-on lg"></i>
 										</button>
+										<button id="toggler" type="button" class="ip-icon active">
+											<i class="ico eye-on lg"></i>
+										</button>
 									</div>
 								</div>
 								<p class="error-txt">비밀번호가 일치하지 않습니다</p>
