--- a/src/components/text.html
+++ b/src/components/text.html
@@ -57,23 +57,23 @@
 							<br>
 							<div class="badge plus">Plus</div>
 							<br>
-							<div class="badge event">이벤트</div>
+							<div class="badge fuchsia">이벤트</div>
 							<br>
-							<div class="badge special">특가</div>
+							<div class="badge pink">특가</div>
 							<br>
-							<div class="badge new-zone">신규존</div>
+							<div class="badge orange">신규존</div>
 							<br>
-							<div class="badge new-car">신차</div>
+							<div class="badge light-blue">신차</div>
 							<br>
-							<div class="badge electric-car">전기차</div>
+							<div class="badge puple">전기차</div>
 							<br>
-							<div class="badge free-zone">프리존</div>
+							<div class="badge navy">프리존</div>
 							<br>
-							<div class="badge round">왕복</div>
+							<div class="badge green">왕복</div>
 							<br>
-							<div class="badge one-way">편도</div>
+							<div class="badge navy-060">편도</div>
 							<br>
-							<div class="badge emergency">긴급</div>
+							<div class="badge red">긴급</div>
 							<br>
 							<div class="badge solid">solid</div>
 							<br>
