--- a/src/scss/_libs/_mypage01.scss
+++ b/src/scss/_libs/_mypage01.scss
@@ -448,8 +448,8 @@
 	.address-search{
 		margin-top:32px;
 		.ip-group{
-			.row{
-				margin-top:16px;
+			.ip-label{
+				margin-bottom:16px;
 			}
 		}
 		.default{
